examples/test/testpolicy4380.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4380
  namespace: namespace234
spec:
  podSelector:
    matchLabels:
      key24: value17
      key40: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value49
      podSelector:
        matchLabels:
          key32: value3
          key34: value6
          key5: value40
